...
            style={({ pressed }) => [
              styles.modalConfirm,
              activeEffect(pressed, "pressed"),
            ]}
          >
            <ThemedText type="action" style={styles.modalConfirmText}>
              Đăng xuất
            </ThemedText>
          </Pressable>
        </View>
      </View>
    </View>
  );
...
